[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neko-security"
version = "2.1.0"
description = "Neko: A multi-mode production-grade offensive security framework"
readme = "README.md"
authors = [{ name = "Kanishk", email = "kanishk@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = [
    "rich>=10.0",
    "requests>=2.25.0",
    "dnspython>=2.0.0",
    "paramiko>=2.7.0",
    "python-whois>=0.7.0",
    "shodan>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/kanishkraj-ops/Neko"

[project.scripts]
neko = "neko.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neko*"]
